Improve text brevity and clarity.

--- a/src/pages/fieldwork.astro
+++ b/src/pages/fieldwork.astro
@@ -14,17 +14,17 @@ import PageDescription from "../components/PageDescription.astro";
     <Background backgroundImage={fieldIcon} />
     <PageTitle title="Fieldwork">
       <PageDescription>
-        My fieldwork is mainly on islands in Southeast Asia. However, I have
-        also been privileged to participate in fieldwork in Australia and the
+        My fieldwork is mainly on Southeast Asian islands. However, I have also
+        been privileged to participate in fieldwork in Australia and the
         mainland United States. The journey spans over 12 years, conducting 30+
         field expeditions across five countries. These field expeditions
-        involved countless people, from local communities, park rangers,
-        friends, colleagues, and research advisors to students that I had the
-        privilege to mentor. I started as someone more useful in washing dishes
-        than preparing specimens in the field 😉, to someone who can lead a
-        complex field expedition in remote mountains of Indonesia and contribute
-        the growth of essential reasearch collections. Kudos to all the people
-        who have been part of this journey!
+        involved countless individuals, from local communities, park rangers,
+        friends, colleagues, and research advisors to students I had the honor
+        of mentoring. Initially, I started as someone more useful in washing
+        dishes than preparing specimens 😉. Eventually, I led a complex field
+        expedition in the remote mountains of Indonesia. I contributed to the
+        growth of essential research collections. I am incredibly grateful to
+        everyone who has been part of this journey!
       </PageDescription>
     </PageTitle>
     <Timeline>
