--- a/src/pages/outreach.astro
+++ b/src/pages/outreach.astro
@@ -17,12 +17,14 @@ import PageDescription from "../components/PageDescription.astro";
       <PageDescription>
         I joined a mountaineering and nature conservation club during my first
         year of undergraduate studies and have been part of the museum community
-        since my master's degree. Since then, I have been involved in various
-        outreach events. I have also been interviewed by several media outlets,
-        including an interview by the Indonesian Ministry of Finance Magazine as
-        part of a success story from a fellowship provided by the ministry.
-        Additionally, I enjoy writing popular articles on various topics,
-        ranging from research to studying abroad.
+        since my master's degree. They have provided me with tremendous
+        experience in various outreach events. I was also interviewed by several
+        media outlets, including an interview by the Indonesian Ministry of
+        Finance Magazine as part of a success story from a fellowship provided
+        by the ministry. These interviews offered more opportunities to share my
+        aspiration to study evolution and advance our knowledge of species
+        diversity. Additionally, I enjoy writing popular articles on various
+        topics, ranging from research to studying abroad.
       </PageDescription>
     </PageTitle>
     <PageSubtitle subtitle="Outreach Events" />
