--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -48,10 +48,10 @@ const spaceClasses = cntl`
         opportunities for speciation. This project focuses on studying small
         mammal diversity and speciation, particularly in Sulawesi and the Sunda
         Shelf, involving extensive fieldwork, genomic studies, and describing
-        undocumented species as necessary. For my dissertation, I focus on in
-        situ diversification of hill rats (<i>Bunomys</i>) on Sulawesi, aiming
-        to improve phylogenetic resolution and understand how the island's
-        geological history has shaped their diversity. This research will aid
+        undocumented species as necessary. For my dissertation, I focus on
+        in-situ diversification of hill rats (<i>Bunomys</i>) on Sulawesi,
+        aiming to improve phylogenetic resolution and understand how the
+        island's geological history has shaped their diversity. I hope to aid
         conservation efforts and deepen our understanding of speciation on a
         large, isolated island like Sulawesi.
         <div class="mt-4 mb-2 text-semibold">Publications:</div>
@@ -135,21 +135,23 @@ const spaceClasses = cntl`
         subtitle="Developing digital tools empowering new learners in evolutionary studies"
       />
       <Content>
-        Field-based evolutionary studies have become increasingly complex,
-        including everything from data collection in the field to downstream
-        data analysis. It is now standard practice for museum scientists to
-        collect voucher specimens with numerous accompanying parts and complex
-        associated data features. On the downstream side, studying biodiversity
-        using genomic sequencing, ranging from thousands of loci to entire
-        genomes, has become the new standard. I am developing open and
-        accessible software to simplify these complex workflows, improve data
-        integration and research reproducibility, and promote inclusive and
-        mutually beneficial international collaborations. I adopt emerging
-        technologies in software development to create user-friendly,
-        memory-efficient, and mobile-friendly software whenever possible. I also
-        take advantage of improvements in CPU technology and heterogenous
-        computing to accelerate data processing while promoting energy and
-        resource-efficient computing practices.
+        Field-based evolutionary studies have become increasingly complicated,
+        from data collection in the field to downstream data analyses. Museum
+        scientists have now routinely collected voucher specimens with numerous
+        accompanying parts and complex associated data features. On the
+        downstream side, evolutionary studies using genomic sequencing, ranging
+        from thousands of loci to entire genomes, has become the new standard.
+        To simplify these complex workflows, improve data integration, and
+        promote research reproducibility, I am developing open and accessible
+        software, especially for the most neglected aspects of data collecting
+        and analyzing workflow. I aim to facilitate inclusive and mutually
+        beneficial international collaborations through innovative data
+        management and data-sharing approaches. To achieve my goals, I leverage
+        emerging technologies in software development to create user-friendly,
+        memory-efficient, cross-platform, and mobile-friendly software whenever
+        feasible. I also capitalize on advancements in CPU technology and
+        heterogenous computing to accelerate data processing while promoting
+        energy- and resource-efficient computing practices.
         <div class="mt-4 mb-2 text-semibold">Publications:</div>
         <ProjectPubs author="Handika and Esselstyn">
           <PubButton
