--- a/src/pages/software.astro
+++ b/src/pages/software.astro
@@ -22,16 +22,16 @@ const cardDescriptonClasses = cntl`
     <Background backgroundImage={codingIcon} />
     <PageTitle title="Software Development">
       <PageDescription>
-        I believe high-quality software is essential not only for
-        reproducibility and advancing science but also for fostering inclusivity
-        within the scientific community. I primarily develop tools to improve
-        data collection, management, and integration in field-based evolutionary
-        studies, as well as to minimize the technical complexities of genomic
-        analysis. All of my software is developed with a focus on accessibility
-        and ease of use, and comes with beginner-friendly documentation.
-        Whenever possible, I ensure cross-platform compatibility, including
-        support for Windows and mobile operating systems, which are often
-        overlooked in evolutionary studies.
+        High-quality software is essential for reproducibility, advancing
+        science, and fostering inclusivity within the scientific community. My
+        software projects focus on improving data collection, management, and
+        integration in field-based evolutionary studies and minimizing the
+        technical complexities of genomic analysis. I put ease of use at the
+        center of the software design process. The GUI software incorporates
+        accessibility features. I work toward crafting informative error
+        handling and quality documentation, and I am always open to feedback and
+        collaboration. I ensure cross-platform compatibility whenever feasible,
+        including support for Windows and mobile operating systems.
       </PageDescription>
     </PageTitle>
     <PageSubtitle subtitle="Software Projects" />
@@ -53,13 +53,13 @@ const cardDescriptonClasses = cntl`
         <p class={cardDescriptonClasses}>
           We develop SEGUL (SEquence and Genomic UtiLities) to address the need
           for a high-performance and accessible phylogenomic tool. It is
-          particularly well-suited for large-scale phylogenomic projects,
-          especially those involving thousands of loci and hundreds of samples.
-          Additionally, SEGUL is capable of handling small Sanger sequences
-          effectively. SEGUL is a practical solution to typical phylogenomic
-          data analyses and a proof of concept for genomic software that scales
-          from smartphones, tablets, and personal computers to high-performance
-          computing clusters.
+          designed to handle large-scale phylogenomic datasets involving
+          thousands of loci and hundreds of samples. Additionally, SEGUL is
+          capable of handling small Sanger sequences effectively. It scales from
+          smartphones, tablets, and personal computers to high-performance
+          computing clusters. SEGUL is a practical solution to typical
+          phylogenomic data analyses and a proof of concept for scalable,
+          cross-platform genomic software.
         </p>
       </SoftwareCard>
     </SoftwareLayout>
@@ -80,11 +80,11 @@ const cardDescriptonClasses = cntl`
             collection-based evolutionary studies. I develop the app in
             collaboration with field biologists from institutions in the United
             States, Mexico, Hong Kong, and Indonesia. It is optimized for
-            offline use and low-end devices. The app is currently in beta and
-            has been tested by several field teams for fieldwork in Indonesia,
-            Brazil, Colombia, Mexico, and the United States. It supports data
-            collection for ornithology and mammalogy, with plans to extend
-            support to other taxa.
+            offline use and low-end devices. The app is in beta and has been
+            tested by several field teams for fieldwork in Indonesia, Brazil,
+            Colombia, Mexico, and the United States. It supports data collection
+            for ornithology and mammalogy, with plans to extend support to other
+            taxa.
           </p>
         </SoftwareCard>
       </SoftwareLayout>
@@ -100,13 +100,16 @@ const cardDescriptonClasses = cntl`
           install="https://github.com/hhandika/ullar"
         >
           <p class={cardDescriptonClasses}>
-            ULLAR is currently in its early development stage. The goal of ULLAR
-            is to create a lightweight and scalable pipeline that requires
-            minimal learning. It aims to reduce runtime dependencies, minimize
-            RAM usage, and provide optimal performance with minimal effort from
-            users. In addition to Linux and macOS, which are typically supported
-            operating systems for bioinformatics, ULLAR will also run natively
-            on Windows whenever possible.
+            ULLAR is currently in the beta development stage. It aims to create
+            a lightweight and scalable pipeline for phylogenomic studies. It
+            requires minimal learning and omits manual config generation and
+            unnecessary shell scripting. It also aims to reduce runtime
+            dependencies, minimize RAM usage, and provide optimal performance
+            with minimal user effort. In addition to Linux and macOS, which are
+            typically supported operating systems for bioinformatics, ULLAR will
+            also run natively on Windows for part of the pipeline, allowing
+            users to have more efficient access to hardware than using the
+            Windows Subsystem for Linux.
           </p>
         </SoftwareCard>
       </SoftwareLayout>
