--- a/src/pages/teaching.astro
+++ b/src/pages/teaching.astro
@@ -36,19 +36,19 @@ const cardDescriptonClasses = cntl`
     <PageTitle title="Teaching, Mentoring, & Workshops">
       <PageDescription>
         Most of my teaching experience comes from my time as a teaching
-        assistant at LSU, except for one course that I taught at Andalas
-        University as a senior undergraduate student. I have also conducted
-        several workshops on molecular analyses and computer programming. The
-        best part of teaching for me is mentoring students in their research and
-        in the field. Recently, in collaboration with <Link
+        assistant at LSU, except for one course I taught at Andalas University
+        as a senior undergraduate student. I have also conducted several
+        workshops on molecular analyses and computer programming. The best part
+        of teaching for me is mentoring students in their research and in the
+        field. In collaboration with <Link
           text="Nurul Inayah"
           url="https://scholar.google.co.id/citations?user=nt8X_HAAAAAJ&hl=en"
           target="_blank"
           rel="noopener noreferrer"
         /> at <Link text="BRIN" url="https://www.brin.go.id/" />
-        in Indonesia, we have initiated a project to mentor biology students near
-        our field sites. This initiative is part of our commitment to support equitable
-        access to research opportunities for students in Indonesia.
+        in Indonesia, we have recently initiated a project to mentor biology students
+        near our field sites. This initiative is part of our commitment to support
+        equitable access to research opportunities for students in Indonesia.
       </PageDescription>
     </PageTitle>
     <PageSubtitle subtitle="Courses Taught" />
@@ -148,7 +148,7 @@ const cardDescriptonClasses = cntl`
         </p>
       </Card>
     </CardLayout>
-    <PageSubtitle subtitle="Mantees" />
+    <PageSubtitle subtitle="Mentees" />
     <p>Coming soon...</p>
   </MainPage>
 </Layout>
