--- a/src/components/buttons/PubButton.astro
+++ b/src/components/buttons/PubButton.astro
@@ -2,7 +2,7 @@
 import WrapButton from "../../layouts/WrapButton.astro";
 import DownloadButton from "./DownloadButton.astro";
 import SendMessageButton from "./SendMessageButton.astro";
-import leadingIcon from "../../assets/icons/analysis.svg";
+import leadingIcon from "../../assets/icons/paper.svg";
 import cntl from "cntl";
 
 interface PubButton {
@@ -113,7 +113,7 @@ const snackbarClasses = cntl`
       // set time 10 seconds
       setTimeout(() => {
         snackbar?.classList.add("hidden");
-      }, 12000);
+      }, 15000);
     });
   });
 
