Improve text clarity.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -107,8 +107,8 @@ const statsGridClasses = cntl`
       <p class={heroTextClasses}>
         I study small mammal diversity and speciation on islands and develop
         software to improve data integration and management, promote mutually
-        beneficial collaboration, and increase the accessibility of biodiversity
-        research.
+        beneficial international collaboration, and increase the accessibility
+        of biodiversity research.
       </p>
     </div>
     <div class={socialMediaClasses}>
