--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -135,23 +135,27 @@ const spaceClasses = cntl`
         subtitle="Developing digital tools empowering new learners in evolutionary studies"
       />
       <Content>
-        Field-based evolutionary studies have become increasingly complicated,
-        from data collection in the field to downstream data analyses. Museum
-        scientists have now routinely collected voucher specimens with numerous
-        accompanying parts and complex associated data features. On the
-        downstream side, evolutionary studies using genomic sequencing, ranging
-        from thousands of loci to entire genomes, has become the new standard.
-        To simplify these complex workflows, improve data integration, and
-        promote research reproducibility, I am developing open and accessible
-        software, especially for the most neglected aspects of data collecting
-        and analyzing workflow. I aim to facilitate inclusive and mutually
-        beneficial international collaborations through innovative data
-        management and data-sharing approaches. To achieve my goals, I leverage
-        emerging technologies in software development to create user-friendly,
-        memory-efficient, cross-platform, and mobile-friendly software whenever
-        feasible. I also capitalize on advancements in CPU technology and
-        heterogenous computing to accelerate data processing while promoting
-        energy- and resource-efficient computing practices.
+        Collection-based evolutionary studies have become increasingly
+        complicated, from specimen collection in the field to studies using
+        natural history collections. Museum scientists have now routinely
+        collected voucher specimens with numerous parts and complex derivative
+        data features. Studies using natural history collections often involve
+        intricate and computationally demanding genomic data analyses. To reduce
+        the technical difficulties of these workflows, enhance computing
+        efficiency, and improve data integration, I develop open and accessible
+        software, especially targeting the neglected aspects of the workflows. I
+        aim to facilitate inclusive and mutually beneficial international
+        collaborations through innovative data management and data-sharing
+        approaches, and low-cost computing practices. To achieve my goals, I
+        leverage emerging technologies in software development (e.g., Rust,
+        Flutter, CI/CD) to create user-friendly, memory-efficient, and
+        cross-platform software. Whenever feasible, I support mobile operating
+        systems, offering a more flexible way to collect data in the field and
+        allowing teaching genomic analyses with limited access to computing
+        power. I also capitalize on advancements in CPU technology and
+        heterogenous computing to accelerate data processing and reduce reliance
+        on power-hungry and costly High-Performance Computing Clusters to
+        promote more energy- and resource-efficient data analysis practices.
         <div class="mt-4 mb-2 text-semibold">Publications:</div>
         <ProjectPubs author="Handika and Esselstyn">
           <PubButton
