Rewrite for better clarity.

--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -145,17 +145,20 @@ const spaceClasses = cntl`
         efficiency, and improve data integration, I develop open and accessible
         software, especially targeting the neglected aspects of the workflows. I
         aim to facilitate inclusive and mutually beneficial international
-        collaborations through innovative data management and data-sharing
+        collaborations through innovative data management, data-sharing
         approaches, and low-cost computing practices. To achieve my goals, I
         leverage emerging technologies in software development (e.g., Rust,
         Flutter, CI/CD) to create user-friendly, memory-efficient, and
         cross-platform software. Whenever feasible, I support mobile operating
         systems, offering a more flexible way to collect data in the field and
-        allowing teaching genomic analyses with limited access to computing
-        power. I also capitalize on advancements in CPU technology and
+        allowing teaching genomic analyses where access to computing power is
+        limited. I also capitalize on advancements in CPU technology and
         heterogenous computing to accelerate data processing and reduce reliance
-        on power-hungry and costly High-Performance Computing Clusters to
-        promote more energy- and resource-efficient data analysis practices.
+        on power-hungry and costly High-Performance Computing Clusters.
+        Promoting more energy- and resource-efficient data analysis practices
+        reduces the ecological footprint of evolutionary studies while allowing
+        underfunded labs to benefit from the decreasing cost of genomic
+        sequencing.
         <div class="mt-4 mb-2 text-semibold">Publications:</div>
         <ProjectPubs author="Handika and Esselstyn">
           <PubButton
