--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -78,11 +78,11 @@ const statsGridClasses = cntl`
   to-chetwode-200
   dark:from-porsche-700
   dark:to-chetwode-600
-  lg:grid-cols-3
+  xl:grid-cols-3
   gap-4
   text-center
   rounded-2xl
-  lg:rounded-full
+  xl:rounded-full
   mt-24
   mx-8
   lg:mx-32
