Fix link colors.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -78,14 +78,14 @@ const statsGridClasses = cntl`
   to-chetwode-200
   dark:from-porsche-700
   dark:to-chetwode-600
-  xl:grid-cols-3
+  lg:grid-cols-3
   gap-4
   text-center
   rounded-2xl
-  xl:rounded-full
+  lg:rounded-full
   mt-24
   mx-8
-  lg:mx-32
+  lg:mx-24
 `;
 ---
 
