--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -28,8 +28,8 @@ const spaceClasses = cntl`
         patterns of small mammal diversity and understanding speciation
         processes within and across islands in the Indo-Australian Archipelago.
         I have also engaged in projects focusing on other taxa and in different
-        regions. Most of the tools I develop are taxon-agnostic. My work is
-        collaborative, involving more than a dozen people in some projects. I
+        regions. Most of the tools I develop are taxon-agnostic. My
+        collaborative work involves more than a dozen people in some projects. I
         strive to make research using museum collections and genomic data
         accessible to students and researchers with limited technical knowledge
         and access to computing resources.
