--- a/src/pages/fieldwork.astro
+++ b/src/pages/fieldwork.astro
@@ -20,11 +20,12 @@ import PageDescription from "../components/PageDescription.astro";
         field expeditions across five countries. These field expeditions
         involved countless individuals, from local communities, park rangers,
         friends, colleagues, and research advisors to students I had the honor
-        of mentoring. Initially, I started as someone more useful in washing
-        dishes than preparing specimens 😉. Eventually, I led a complex field
-        expedition in the remote mountains of Indonesia. I contributed to the
-        growth of essential research collections. I am incredibly grateful to
-        everyone who has been part of this journey!
+        of mentoring. I started as someone more useful in washing dishes than
+        preparing specimens 😉. Eventually, I led complex field expeditions in
+        the remote mountains of Indonesia. My favorite parts of this journey are
+        contributing to the growth of essential natural history collections,
+        many of which were unknown to science, and working among exceptional
+        scientists and incredible local communities.
       </PageDescription>
     </PageTitle>
     <Timeline>
