--- a/src/pages/software.astro
+++ b/src/pages/software.astro
@@ -23,16 +23,16 @@ const cardDescriptonClasses = cntl`
     <Background backgroundImage={codingIcon} />
     <PageTitle title="Software Development">
       <PageDescription>
-        High-quality software is essential for reproducibility, advancing
-        science, and fostering inclusivity within the scientific community. My
-        software projects focus on improving data collection, management, and
-        integration in field-based evolutionary studies and minimizing the
-        technical complexities of genomic analysis. I put ease of use at the
-        center of the software design process. The GUI software incorporates
-        accessibility features. I work toward crafting informative error
-        handling and quality documentation, and I am always open to feedback and
-        collaboration. I ensure cross-platform compatibility whenever feasible,
-        including support for Windows and mobile operating systems.
+        Quality software is essential for reproducibility, fostering
+        inclusivity, and advancing evolutionary studies. My software projects
+        focus on improving data collection, management, and integration in
+        field-based evolutionary studies and minimizing the technical
+        complexities of genomic analysis. I put ease of use at the center of the
+        software design process. The GUI software incorporates accessibility
+        features. I work toward crafting informative error handling and quality
+        documentation, and I am always open to feedback and collaboration. I
+        ensure cross-platform compatibility whenever feasible, including support
+        for Windows and mobile operating systems.
       </PageDescription>
     </PageTitle>
     <PageSubtitle subtitle="Software Projects" />
@@ -61,12 +61,11 @@ const cardDescriptonClasses = cntl`
           is capable of handling small Sanger sequences effectively. It scales
           from smartphones, tablets, and personal computers to high-performance
           computing clusters and is available as a command-line app, GUI, and
-          packages for Rust and Python. Usage in other languages is also
-          possible using Rust-interface, such as usage in R using <LinkCard
-            text="extendr"
-            url="https://extendr.github.io/"
-          />. It is a practical solution to typical phylogenomic data analyses
-          and a proof of concept for scalable, cross-platform genomic software.
+          packages for Rust and Python. Using the SEGUL library in other
+          languages is also possible using the Rust interface, such as in R
+          using <LinkCard text="extendr" url="https://extendr.github.io/" />. It
+          is a practical solution to typical phylogenomic data analyses and a
+          proof of concept for scalable, cross-platform genomic software.
         </p>
       </SoftwareCard>
     </SoftwareLayout>
@@ -81,17 +80,20 @@ const cardDescriptonClasses = cntl`
           install="https://www.nahpu.app/docs/installation"
         >
           <p class={cardDescriptonClasses}>
-            The NAHPU field catalog is a mobile and desktop application designed
-            to streamline data collection in the field, foster international
-            collaboration, and support responsible and reproducible
-            collection-based evolutionary studies. I develop the app in
-            collaboration with field biologists from institutions in the United
-            States, Mexico, Hong Kong, and Indonesia. It is optimized for
-            offline use and low-end devices. The app is in beta and has been
-            tested by several field teams for fieldwork in Indonesia, Brazil,
-            Colombia, Mexico, and the United States. It supports data collection
-            for ornithology and mammalogy, with plans to extend support to other
-            taxa.
+            The NAHPU project is a collaborative effort to develop a digital
+            field catalog for natural history collection. We designed it to
+            streamline data collection from fieldwork to the museum database. It
+            minimizes information loss and lack of integration between
+            specimens, collecting efforts, and derivative data (e.g.,
+            photographs and sound recording). We aim to foster international
+            collaboration and improved reproducibility through rich, consistent
+            data features and multi-language support. NAHPU features real-time
+            statistics to keep track of specimen records to aid in making
+            decisions in collecting efforts and avoiding over-sampling. The app
+            is in beta. Several field teams tested NAHPU for fieldwork in
+            Brazil, Colombia, Indonesia, Mexico, and the United States. It
+            supports data collection for ornithology and mammalogy, with plans
+            to extend support to other taxa.
           </p>
         </SoftwareCard>
       </SoftwareLayout>
@@ -110,13 +112,12 @@ const cardDescriptonClasses = cntl`
             ULLAR is currently in the beta development stage. It aims to create
             a lightweight and scalable pipeline for phylogenomic studies. It
             requires minimal learning and omits manual config generation and
-            unnecessary shell scripting. It also aims to reduce runtime
-            dependencies, minimize RAM usage, and provide optimal performance
-            with minimal user effort. In addition to Linux and macOS, which are
-            typically supported operating systems for bioinformatics, ULLAR will
-            also run natively on Windows for part of the pipeline, allowing
-            users to have more efficient access to hardware than using the
-            Windows Subsystem for Linux.
+            shell scripting. The pipeline uses Rust, which has no runtime
+            dependencies, is memory-safe, and efficiently uses computing
+            resources. In addition to Linux and macOS, typically supported
+            operating systems for bioinformatics, ULLAR will also run natively
+            on Windows for part of the pipeline, allowing more efficient access
+            to hardware than using the Windows Subsystem for Linux.
           </p>
         </SoftwareCard>
       </SoftwareLayout>
@@ -131,15 +132,19 @@ const cardDescriptonClasses = cntl`
             install="https://github.com/mammaldiversity/mdd_app"
           >
             <p class={cardDescriptonClasses}>
-              The Mammal Diversity Database (MDD) app is a mobile application
-              that I developed in collaboration with the MDD team. It allows
-              offline access, advanced search, and user-selected export
-              functions for the American Society of Mammalogists' Mammal
-              Diversity Database.
+              The American Society of Mammalogists' Mammal Diversity Database
+              (MDD) app is a mobile and desktop application I developed as part
+              of <LinkCard
+                text="the MDD curation team"
+                url="https://www.mammaldiversity.org/about.html"
+              />. It is currently in beta. The app allows offline access,
+              advanced search, and user-selected export functions for the
+              database. We aim to simplify access to MDD data when access to the
+              internet is limited.
             </p>
           </SoftwareCard>
         </SoftwareLayout>
       </div>
     </div>
-  </MainPage>
-</Layout>
+  </MainPage></Layout
+>
