--- a/src/pages/software.astro
+++ b/src/pages/software.astro
@@ -27,7 +27,7 @@ const cardDescriptonClasses = cntl`
         inclusivity, and advancing evolutionary studies. My software projects
         focus on improving data collection, management, and integration in
         field-based evolutionary studies and minimizing the technical
-        complexities of genomic analysis. I put ease of use at the center of the
+        complexities of genomic analyses. I put ease of use at the center of the
         software design process. The GUI software incorporates accessibility
         features. I work toward crafting informative error handling and quality
         documentation, and I am always open to feedback and collaboration. I
