--- a/src/pages/software.astro
+++ b/src/pages/software.astro
@@ -60,12 +60,14 @@ const cardDescriptonClasses = cntl`
           involving thousands of loci and hundreds of samples. Additionally, it
           is capable of handling small Sanger sequences effectively. It scales
           from smartphones, tablets, and personal computers to high-performance
-          computing clusters and is available as a command-line app, GUI, and
-          packages for Rust and Python. Using the SEGUL library in other
-          languages is also possible using the Rust interface, such as in R
-          using <LinkCard text="extendr" url="https://extendr.github.io/" />. It
-          is a practical solution to typical phylogenomic data analyses and a
-          proof of concept for scalable, cross-platform genomic software.
+          computing clusters. It is available as a command-line app, mobile and
+          desktop GUI, and packages for Rust and Python. Using the SEGUL library
+          in other languages is also possible using the Rust interface, such as
+          in R using <LinkCard
+            text="extendr"
+            url="https://extendr.github.io/"
+          />. It is a practical solution to typical phylogenomic data analyses
+          and a proof of concept for scalable, cross-platform genomic software.
         </p>
       </SoftwareCard>
     </SoftwareLayout>
