Make sentence clearer.

--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -22,17 +22,17 @@ const spaceClasses = cntl`
     <Background backgroundImage={researchIcon} />
     <PageTitle title="Research Projects">
       <PageDescription>
-        My research integrates fieldwork, museum collections, genomics, and the
-        development of digital tools to address speciation, biogeography, and
-        conservation questions. In particular, it centers on identifying
-        patterns of small mammal diversity and understanding speciation
-        processes within and across islands in the Indo-Australian Archipelago.
-        I have also engaged in projects focusing on other taxa and in different
-        regions. Most of the tools I develop are taxon-agnostic. My
+        My research integrates fieldwork, natural history collections, genomics,
+        and the development of digital tools to address speciation,
+        biogeography, and conservation questions. In particular, it centers on
+        identifying patterns of small mammal diversity and understanding
+        speciation processes within and across islands in the Indo-Australian
+        Archipelago. I have also engaged in projects focusing on other taxa and
+        in different regions. Most of the tools I develop are taxon-agnostic. My
         collaborative work involves more than a dozen people in some projects. I
-        strive to make research using museum collections and genomic data
-        accessible to students and researchers with limited technical knowledge
-        and access to computing resources.
+        strive to make research using natural history collections and genomic
+        data accessible to students and researchers with limited technical
+        knowledge and access to computing resources.
       </PageDescription>
     </PageTitle>
     <div class="my-8">
