--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -108,7 +108,9 @@ const statsGridClasses = cntl`
         I study small mammal diversity and speciation on islands and develop
         software to improve data integration and management, promote mutually
         beneficial international collaboration, and increase the accessibility
-        of biodiversity research.
+        of biodiversity research. My work encompasses conducting fieldwork in
+        remote montane forests and developing computer programs that scale from
+        mobile devices to high-performance computing clusters.
       </p>
     </div>
     <div class={socialMediaClasses}>
