--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -57,6 +57,39 @@ const spaceClasses = cntl`
         conservation efforts and deepen our understanding of speciation on a
         large, isolated island like Sulawesi.
         <div class="mt-4 mb-2 text-semibold">Publications:</div>
+        <ProjectPubs author="Handika et. al.">
+          <PubButton
+            title="A new species of Frateromys from the Northern Peninsula of Sulawesi, Indonesia"
+            year="In prep"
+            author="Handika, H., Rowe, K.C., Achmadi, A.S., Swanson, M. T., and Esselstyn, J.A"
+          />
+          <span class={spaceClasses}>,</span>
+          <PubButton
+            author="Handika, H., Achmadi, A.S., Esselstyn, J.A., and Rowe, K.C"
+            year="2021"
+            title="Molecular and morphological systematics of the Bunomys division (Rodentia: Muridae), an endemic radiation on Sulawesi"
+            doi="https://doi.org/10.1111/zsc.12460"
+            pdfUrl="https://www.researchgate.net/publication/346459790_Molecular_and_morphological_systematics_of_the_Bunomys_division_Rodentia_Muridae_an_endemic_radiation_on_Sulawesi?_tp=eyJjb250ZXh0Ijp7ImZpcnN0UGFnZSI6InB1YmxpY2F0aW9uIiwicGFnZSI6InByb2ZpbGUiLCJwcmV2aW91c1BhZ2UiOiJwcm9maWxlIiwicG9zaXRpb24iOiJwYWdlQ29udGVudCJ9fQ"
+            isRequest={true}
+          />
+        </ProjectPubs>
+        <ProjectPubs author="Demos et. al.">
+          <PubButton
+            author="Demos, T.C., Achmadi, A.S., Handika, H., Rowe, K.C. and Esselstyn, J.A"
+            year={2017}
+            title="A new species of shrew (Soricomorpha: Crocidura) from Java, Indonesia: possible character displacement despite interspecific gene flow"
+            doi="https://doi.org/10.1093/jmammal/gyw183"
+            pdfUrl="https://esselstyn.github.io/publications/2017/Demos-2017.pdf"
+          />
+          <span class={spaceClasses}>,</span>
+          <PubButton
+            author="Demos, T.C., Achmadi, A.S., Giarla, T.C., Handika, H., Rowe, K.C. and Esselstyn, J.A"
+            year={2016}
+            title="Local endemism and within‐island diversification of shrews illustrate the importance of speciation in building Sundaland mammal diversity"
+            doi="https://doi.org/10.1111/mec.13820"
+            pdfUrl="https://esselstyn.github.io/publications/2016/Demos-2016.pdf"
+          />
+        </ProjectPubs>
         <ProjectPubs author="Esselstyn et. al.">
           <PubButton
             author="Esselstyn, J.A., Achmadi, A.S., Handika, H. , Swanson, M. T., Giarla, T.C. and Rowe, K.C"
@@ -82,20 +115,12 @@ const spaceClasses = cntl`
             pdfUrl="https://esselstyn.github.io/publications/2015/Esselstyn-2015.pdf"
           />
         </ProjectPubs>
-        <ProjectPubs author="Handika et. al.">
+        <ProjectPubs author="Giarla et. al.">
           <PubButton
-            title="A new species of Frateromys from the Northern Peninsula of Sulawesi, Indonesia"
-            year="In prep"
-            author="Handika, H., Rowe, K.C., Achmadi, A.S., Swanson, M. T., and Esselstyn, J.A"
-          />
-          <span class={spaceClasses}>,</span>
-          <PubButton
-            author="Handika, H., Achmadi, A.S., Esselstyn, J.A., and Rowe, K.C"
-            year="2021"
-            title="Molecular and morphological systematics of the Bunomys division (Rodentia: Muridae), an endemic radiation on Sulawesi"
-            doi="https://doi.org/10.1111/zsc.12460"
-            pdfUrl="https://www.researchgate.net/publication/346459790_Molecular_and_morphological_systematics_of_the_Bunomys_division_Rodentia_Muridae_an_endemic_radiation_on_Sulawesi?_tp=eyJjb250ZXh0Ijp7ImZpcnN0UGFnZSI6InB1YmxpY2F0aW9uIiwicGFnZSI6InByb2ZpbGUiLCJwcmV2aW91c1BhZ2UiOiJwcm9maWxlIiwicG9zaXRpb24iOiJwYWdlQ29udGVudCJ9fQ"
-            isRequest={true}
+            author="Giarla, T. C., Achmadi, A.S., Fabre, P. H., Handika, H., Chipps, A. S., Swanson, M.T., Nations, J. A., Morni, M. A., William-Dee, J., Inayah, N., Jayanti, E. D., Nurdin, M.R.T.J., Griffin, K. E., Khan, F. A. A., Heaney, L. R., Rowe, K. C., Esselstyn, J. A"
+            year="Accepted"
+            title="Systematics and historical biogeography of Crunomys and Maxomys (Muridae: Murinae), with the description of a new species from Sulawesi and new genus-level classification"
+            journal="Journal of Mammalogy"
           />
         </ProjectPubs>
         <ProjectPubs author="Nations et. al.">
@@ -107,25 +132,7 @@ const spaceClasses = cntl`
             pdfUrl="https://www.researchgate.net/publication/377726198_Three_new_shrews_Soricidae_Crocidura_from_West_Sumatra_Indonesia_elevational_and_morphological_divergence_in_syntopic_sister_taxa"
           />
         </ProjectPubs>
-        <ProjectPubs author="Demos et. al.">
-          <PubButton
-            author="Demos, T.C., Achmadi, A.S., Handika, H., Rowe, K.C. and Esselstyn, J.A"
-            year={2017}
-            title="A new species of shrew (Soricomorpha: Crocidura) from Java, Indonesia: possible character displacement despite interspecific gene flow"
-            doi="https://doi.org/10.1093/jmammal/gyw183"
-            pdfUrl="https://esselstyn.github.io/publications/2017/Demos-2017.pdf"
-          />
-          <span class={spaceClasses}>,</span>
-          <PubButton
-            author="Demos, T.C., Achmadi, A.S., Giarla, T.C., Handika, H., Rowe, K.C. and Esselstyn, J.A"
-            year={2016}
-            title="Local endemism and within‐island diversification of shrews illustrate the importance of speciation in building Sundaland mammal diversity"
-            doi="https://doi.org/10.1111/mec.13820"
-            pdfUrl="https://esselstyn.github.io/publications/2016/Demos-2016.pdf"
-          />
-        </ProjectPubs>
       </Content>
-
       <div
         class="absolute inset-x-0 top-[calc(100%-13rem)] -z-10 transform-gpu overflow-hidden blur-3xl sm:top-[calc(100%-30rem)]"
         aria-hidden="true"
