--- a/src/pages/pubs.astro
+++ b/src/pages/pubs.astro
@@ -15,7 +15,7 @@ import Background from "../components/Background.astro";
       <PageTitle title="Publications" />
       <Publication year="Forthcoming">
         <Forthcoming
-          author="Giarla, T. C., Achmadi, A.S., Fabre, P. H., Handika, H., Chipps, A. S., Swanson, M.T., Nations, J. A., Morni, M. A., William-Dee, J., Inayah, N., Jayanti, E. D., Nurdin, M.R.T.J., Griffin, K. E., Khan, F. A. A., Heaney, L. R., Rowe, K. C., Esselstyn, J. A."
+          author="Giarla, T. C., Achmadi, A.S., Fabre, P. H., Handika, H., Chipps, A. S., Swanson, M.T., Nations, J. A., Morni, M. A., William-Dee, J., Inayah, N., Jayanti, E. D., Nurdin, M.R.T.J., Griffin, K. E., Khan, F. A. A., Heaney, L. R., Rowe, K. C., Esselstyn, J. A"
           year="Accepted"
           title="Systematics and historical biogeography of Crunomys and Maxomys (Muridae: Murinae), with the description of a new species from Sulawesi and new genus-level classification"
           journal="Journal of Mammalogy"
