--- a/src/components/pubs/Forthcoming.astro
+++ b/src/components/pubs/Forthcoming.astro
@@ -7,11 +7,11 @@ interface JournalArticle {
   year: string;
   title: string;
   journal: string;
-  url: string;
-  pdf?: string;
+  doi?: string;
+  pdfUrl?: string;
 }
 
-const { author, year, title, journal, url, pdf } =
+const { author, year, title, journal, doi, pdfUrl } =
   Astro.props as JournalArticle;
 ---
 
@@ -32,17 +32,19 @@ const { author, year, title, journal, url, pdf } =
         ))
     }. {year}. {title}. <em>{journal}</em>.
   </p>
-  <WrapButton>
-    <DownloadButton text="View Preprint" url={url} />
-    {
-      pdf && (
-        <DownloadButton
-          text="Download PDF"
-          url={pdf}
-          isDownload="true"
-          extendClass="btn-active"
-        />
-      )
-    }
-  </WrapButton>
+  {
+    doi && (
+      <WrapButton>
+        <DownloadButton text="View Preprint" url={doi} />
+        {pdfUrl && (
+          <DownloadButton
+            text="Download PDF"
+            url={pdfUrl}
+            isDownload="true"
+            extendClass="btn-active"
+          />
+        )}
+      </WrapButton>
+    )
+  }
 </div>
