--- a/src/pages/pubs.astro
+++ b/src/pages/pubs.astro
@@ -13,16 +13,13 @@ import Background from "../components/Background.astro";
     <div class="mx-auto h-full max-w-5xl py-6 sm:py-16 lg:py-8">
       <Background backgroundImage={cvIcon} />
       <PageTitle title="Publications" />
-      <Publication year="Forthcoming">
-        <Forthcoming
-          author="Nations, J.A., Kohli, B.A., Handika, H. , Achmadi, A.S., Polito, M.J., Rowe, K.C. and Esselstyn, J. A"
-          year="Accepted"
-          title="The roles of isolation and interspecific interaction in generating the functional diversity of an insular mammal radiation"
-          journal="Oikos"
-          url="https://doi.org/10.1101/2022.07.15.500274"
-          pdf="https://www.biorxiv.org/content/10.1101/2022.07.15.500274v3.full.pdf"
-        />
-      </Publication>
+      <Publication year="Forthcoming" />
+      <Forthcoming
+        author="Giarla, T. C., Achmadi, A.S., Fabre, P. H., Handika, H., Chipps, A. S., Swanson, M.T., Nations, J. A., Morni, M. A., William-Dee, J., Inayah, N., Jayanti, E. D., Nurdin, M.R.T.J., Griffin, K. E., Khan, F. A. A., Heaney, L. R., Rowe, K. C., Esselstyn, J. A"
+        year="Accepted"
+        title="Systematics and historical biogeography of Crunomys and Maxomys (Muridae: Murinae), with the description of a new species from Sulawesi and new genus-level classification"
+        journal="Journal of Mammalogy"
+      />
       <Publication year="2024">
         <Published
           author="Handika, H. and Esselstyn, J. A"
@@ -32,6 +29,16 @@ import Background from "../components/Background.astro";
           pageVol="24(7)"
           doi="https://doi.org/10.1111/1755-0998.13964"
           pdfUrl="https://www.researchgate.net/publication/380125709_SEGUL_Ultrafast_memory-efficient_and_mobile-friendly_software_for_manipulating_and_summarizing_phylogenomic_datasets"
+          isRequest={true}
+        />
+        <Published
+          author="Nations, J.A., Kohli, B.A., Handika, H. , Achmadi, A.S., Polito, M.J., Rowe, K.C. and Esselstyn, J. A"
+          year={2024}
+          title="The roles of isolation and interspecific interaction in generating the functional diversity of an insular mammal radiation"
+          journal="Oikos"
+          pageVol="p.e10888"
+          doi="https://doi.org/10.1111/oik.10888"
+          pdfUrl="https://www.researchgate.net/publication/386408066_The_roles_of_isolation_and_interspecific_interaction_in_generating_the_functional_diversity_of_an_insular_mammal_radiation"
           isRequest={true}
         />
         <Published
