--- a/src/pages/pubs.astro
+++ b/src/pages/pubs.astro
@@ -15,6 +15,12 @@ import Background from "../components/Background.astro";
       <PageTitle title="Publications" />
       <Publication year="Forthcoming" />
       <Forthcoming
+        author="Handika, H., Moncrieff, A. E., Del-Rio G., Canton, R., Rutledge, S. L., Hernández-Canchola, G., Babb-Biernacki, S. J.  Chipps, A. S., Pérez-Amaya, N., Chornelia, A., Morales-Martínez, D. M., McCallum, Q., Thom, G., Esselstyn, J. A"
+        year="In prep"
+        title="NAHPU: A field cataloging application for efficient, repeatable, and inclusive museum-based evolutionary studies"
+        journal=""
+      />
+      <Forthcoming
         author="Giarla, T. C., Achmadi, A.S., Fabre, P. H., Handika, H., Chipps, A. S., Swanson, M.T., Nations, J. A., Morni, M. A., William-Dee, J., Inayah, N., Jayanti, E. D., Nurdin, M.R.T.J., Griffin, K. E., Khan, F. A. A., Heaney, L. R., Rowe, K. C., Esselstyn, J. A"
         year="Accepted"
         title="Systematics and historical biogeography of Crunomys and Maxomys (Muridae: Murinae), with the description of a new species from Sulawesi and new genus-level classification"
